<resources>
    <string name="app_name">Save the moment</string>
    <string name="button_list_of_moments_filter_text">Filter</string>
    <string name="text_list_of_moments_tags_hint">Enter tags to filter</string>
    <string name="button_main_list_text">List of moments</string>
    <string name="button_main_map_text">Map of moments</string>
    <string name="button_main_create_text">Create moment</string>
    <string name="textview_momentview_title_text">Title</string>
    <string name="textview_momentview_location_text">Location</string>
    <string name="textview_momentview_description_text">Description</string>
    <string name="textview_momentview_capturingtime_text">Capturing time</string>
    <string name="menuitem_momentview_onmap_text">Show on map</string>
    <string name="menuitem_momentview_edit_text">Edit</string>
    <string name="menuitem_momenteditor_save_text">Save</string>
    <string name="edittext_momenteditor_title_text">Title</string>
    <string name="edittext_momenteditor_location_text">Location</string>
    <string name="edittext_momenteditor_description_text">Description</string>
    <string name="textview_momenteditor_capturingtime_date_text">Capturing date</string>
    <string name="textview_momenteditor_capturingtime_time_text">Capturing time</string>
    <string name="textview_momenteditor_location_text">Location</string>
    <string name="button_momenteditor_editdate_text">Change date</string>
    <string name="button_momenteditor_edittime_text">Change time</string>
    <string name="button_momenteditor_editlocation_text">Change location</string>
    <string name="button_momenteditor_addpicture_text">Add picture</string>
    <string name="text_list_of_moments_empty_text">No moments yet</string>
    <string name="menuitem_list_of_moments_new_moment_text">Create new moment</string>
    <string name="title_activity_choose_location">ChooseLocationActivity</string>
    <string name="title_activity_map_of_moments">MapOfMomentsActivity</string>
    <string name="momentview_no_location_specified">No location specified for this moment</string>
    <string name="menuitem_list_of_moments_show_on_map_text">Show on map</string>
    <string name="menuitem_momentview_delete_text">Delete</string>
    <string name="alertdialog_yes">YES</string>
    <string name="alertdialog_no">NO</string>
    <string name="alertdialog_ok">Ok</string>
    <string name="alertdialog_cancel">Cancel</string>
    <string name="alertdialog_delete_moment_title">Delete this moment</string>
    <string name="alertdialog_delete_moment_text">Are you sure you want to delete this moment?</string>
    <string name="alertdialog_tags_add">Enter new tag</string>
    <string name="alertdialog_tags_delete_title">Delete tag</string>
    <string name="alertdialog_tags_delete_text">Are you sure you want to delete tag</string>
    <string name="alertdialog_image_delete_title">Delete picture</string>
    <string name="alertdialog_image_delete_text">Are you sure you want to delete picture?</string>
    <string name="alertdialog_audio_delete_title">Delete audio</string>
    <string name="alertdialog_audio_delete_text">Are you sure you want to delete audio?</string>
    <string name="alertdialog_video_delete_title">Delete video</string>
    <string name="alertdialog_video_delete_text">Are you sure you want to delete video?</string>
    <string name="dialog_add_media_title">What do you want to add?</string>
    <string name="Photo">Photo</string>
    <string name="Audio">Audio</string>
    <string name="Video">Video</string>
    <string name="textview_momentview_tags_text">Tags</string>
    <string name="edittext_momenteditor_tags_add_text">Enter new tag</string>
    <string name="error_title_required">Title is required</string>
    <string name="button_choose_location_ok_text">OK</string>
    <string name="button_momenteditor_start">Start</string>
    <string name="button_momenteditor_stop">Stop</string>
</resources>
