<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_moment_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="ru.spbau.savethemoment.ui.MomentEditorActivity"
        android:orientation="vertical">

        <include
            android:id="@+id/tool_bar_momenteditor"
            layout="@layout/tool_bar"
            ></include>

        <EditText
            android:gravity="center"
            android:hint="@string/edittext_momenteditor_title_text"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edittext_momenteditor_title"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/textview_momenteditor_capturingtime_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textview_momenteditor_capturingtime_date"
                    android:layout_weight="1" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_momenteditor_editdate"
                    android:text="@string/button_momenteditor_editdate_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/textview_momenteditor_capturingtime_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textview_momenteditor_capturingtime_time"
                    android:layout_weight="1" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_momenteditor_edittime"
                    android:text="@string/button_momenteditor_edittime_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/textview_momenteditor_location_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textview_momenteditor_location"
                    android:layout_weight="1" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_momenteditor_editlocation"
                    android:text="@string/button_momenteditor_editlocation_text"/>
            </LinearLayout>

            <EditText
                android:hint="@string/edittext_momenteditor_description_text"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edittext_momenteditor_description"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/button_momenteditor_addpicture"
                android:text="@string/button_momenteditor_addpicture_text"/>

          <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearlayout_momenteditor_media"
                android:orientation="vertical"/>

        </LinearLayout>
        <EditText
            android:hint="@string/edittext_momenteditor_description_text"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edittext_momenteditor_description"
            android:layout_weight="1" />

        <EditText
            android:hint="@string/edittext_momenteditor_tags_add_text"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edittext_momenteditor_tags_add"
            android:inputType="text"
            android:layout_weight="1" />


        <com.cunoraz.tagview.TagView
            xmlns:tagview="http://schemas.android.com/apk/res-auto"
            android:id="@+id/tagview_momenteditor_tags"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            tagview:lineMargin="5dp"
            tagview:tagMargin="5dp"
            tagview:textPaddingLeft="8dp"
            tagview:textPaddingTop="5dp"
            tagview:textPaddingRight="8dp"
            tagview:textPaddingBottom="5dp" />

    </LinearLayout>



    </LinearLayout>
</ScrollView>