<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_list_of_moments"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:focusable="true"
              android:focusableInTouchMode="true"
              tools:context="ru.spbau.savethemoment.ui.ListOfMomentsActivity">

    <include
        android:id="@+id/tool_bar_list_of_moments"
        layout="@layout/tool_bar"
        ></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:labelFor="@+id/text_list_of_moments_tags"
                android:layout_weight="1"
                android:inputType="text|textFilter"
                android:hint="@string/text_list_of_moments_tags_hint"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_list_of_moments_filter"
                android:layout_weight="1"
                android:text="@string/button_list_of_moments_filter_text" />

        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/listview_list_of_moments"
            android:layout_weight="1" />

        <TextView
            android:text="@string/text_list_of_moments_empty_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_list_of_moments_empty"/>

    </LinearLayout>
</LinearLayout>
